# Cronlite

./: README.md  pyproject.toml
cronlite/: __init__.py  core.py  scheduler.py
examples/: demo.py
tests/: test_scheduler.py
