[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cronlite"
version = "1.0.0"
description = "Embedded Python task scheduler with human-readable schedules, cron support, and SQLite persistence"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "prabhay759" }]
keywords = ["scheduler", "cron", "task", "jobs", "background", "sqlite", "periodic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Scheduling",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/prabhay759/cronlite"
Repository = "https://github.com/prabhay759/cronlite"
Issues = "https://github.com/prabhay759/cronlite/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
